[gd_scene load_steps=10 format=3 uid="uid://cx5wmtrdli8ue"]

[ext_resource type="Script" path="res://src/game_objects/note.gd" id="1_vylkh"]
[ext_resource type="Texture2D" uid="uid://prs4w18005jw" path="res://assets/notes/hnote1.png" id="2_ekj8l"]
[ext_resource type="Texture2D" uid="uid://dvrwd256w4apk" path="res://assets/notes/hnote2.png" id="3_a57q8"]
[ext_resource type="Texture2D" uid="uid://4v2es8a77jbs" path="res://assets/notes/hnote3.png" id="4_3r80w"]
[ext_resource type="Texture2D" uid="uid://7esghoc0usfc" path="res://assets/notes/hnote4.png" id="5_4408v"]
[ext_resource type="Texture2D" uid="uid://cbnpapd6h57e4" path="res://assets/notes/hnote5.png" id="6_pybah"]
[ext_resource type="Texture2D" uid="uid://ctfdmibvkdmbl" path="res://assets/notes/hnote6.png" id="7_j573o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4b1sx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ekj8l")
}, {
"duration": 1.0,
"texture": ExtResource("3_a57q8")
}, {
"duration": 1.0,
"texture": ExtResource("4_3r80w")
}, {
"duration": 1.0,
"texture": ExtResource("5_4408v")
}, {
"duration": 1.0,
"texture": ExtResource("6_pybah")
}, {
"duration": 1.0,
"texture": ExtResource("7_j573o")
}],
"loop": false,
"name": &"textures",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1kgj1"]
size = Vector2(74, 10)

[node name="Note" type="Node2D"]
script = ExtResource("1_vylkh")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-35, 0, 70, 40)

[node name="Textures" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4b1sx")
animation = &"textures"
speed_scale = 0.0

[node name="Collision" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource("RectangleShape2D_1kgj1")

[node name="NoteEndCollision" type="Area2D" parent="."]
metadata/note_end = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteEndCollision"]
position = Vector2(0, 35)
shape = SubResource("RectangleShape2D_1kgj1")

[node name="ExtendTexture" type="ColorRect" parent="."]
offset_left = -8.0
offset_right = 8.0
offset_bottom = 35.0
pivot_offset = Vector2(8, 0)
size_flags_horizontal = 0
size_flags_vertical = 0

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
